<resources>
    <string name="app_name">MyClinic</string>

    <!-- WelcomeActivity -->
    <string name="welcome_hi">Hi</string>
    <string name="welcome_greetings">Thanks for giving us a chance to serve you,\nLet us know how can we help</string>
    <string name="welcome_emergency">Emergency</string>
    <string name="welcome_medical_kit">Medical Kit</string>
    <string name="welcome_stem_cell">Stem Cell</string>

    <!-- MedicalKitActivity -->
    <string name="mk_just_a_few">Just few steps away</string>
    <string name="mk_doctor">I\'m a Doctor</string>
    <string name="mk_retailer">I\'m a Retailer</string>
    <string name="mk_patient">I\'m a Patient</string>
    <string name="mk_pharmacist">I\'m a Pharmacist</string>
    <string name="mk_let_us_know">Let us know about yourself</string>

    <!-- VerifyActivity -->
    <string name="verify_verify_me">Verify Me</string>
    <string name="verify_enter_mobile">Enter mobile number</string>
    <string name="verify_info">Enter mobile number to get a verification code</string>
    <string name="verify_confirm">Confirm</string>

    <!-- RegistrationActivity -->
    <string name="registration_title">About Me</string>
    <string name="registration_enter_name">Name</string>
    <string name="registration_street_address">Street Address</string>
    <string name="registration_city">City</string>
    <string name="registration_state">State</string>
    <string name="registration_zip_code">Zip Code</string>
    <string name="registration_issue">Issue</string>
    <string name="registration_fill">Fill</string>
    <string name="registration_qualification">Qualification</string>
    <string name="registration_licence">Licence number</string>
    <string name="registration_variable">Variable</string>

    <!-- StemActivity -->
    <string name="patient_navigation_bank">bank</string>
    <string name="patient_profile">profile</string>
    <string name="patient_tab_government">Government</string>
    <string name="patient_tab_private">Private</string>
    <string name="patient_hi">Hi XYZ,</string>
    <string name="payment_new_card">Add new card</string>
    <string name="payment_share_description">To get exclusive discount</string>
    <string name="payment_share">Share Now</string>
    <string name="payment_know_more"><u>Know More</u></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- MapsActivity -->
    <string name="maps_bank_name">Bank Name</string>
    <string name="maps_title_activity">Maps</string>
    <string name="maps_pay_now">Pay Now</string>
    <string name="maps_call">call</string>
    <string name="maps_website">Website</string>
    <string name="maps_visit">Visit</string>
    <string name="maps_rating_0">0</string>
    <string name="maps_rating_5">/5</string>
    <string name="patient_clinic_name">Clinic Name</string>
    <string name="patient_near_me">Near Me</string>

    <!-- ProfileFragment -->
    <string name="all_logout">Logout</string>
    <string name="all_name">Name:</string>
    <string name="all_address">Address:</string>
    <string name="all_city">City:</string>
    <string name="all_zip_code">Zip Code:</string>
    <string name="all_age">Age:</string>

    <!-- ShareActivity -->
    <string name="share_title">Share</string>
    <string name="share_cashback_title">Get up to 50% cashback</string>
    <string name="share_info">On every download by your referral</string>
    <string name="share_t_c_apply"><u>T&amp;C Apply</u></string>

    <!-- DoctorActivity -->
    <string name="doctor_today">Today</string>
    <string name="doctor_past">Past</string>
    <string name="doctor_empty_list">No Appointments Today</string>
    <string name="doctor_qualification">Qualification:</string>
    <string name="doctor_licence">Licence:</string>
    <string name="offline_payment">Scan QR code for Offline Payment</string>
    <string name="age">Age :</string>
    <string name="patient_timing">Timing:</string>
    <string name="doctor_patient_name">Hospital Name</string>
    <string name="verify_submit">Submit</string>
    <string name="verify_enter_otp_info">Enter verification code sent to</string>
    <string name="date">Date</string>

    <!-- Doctor Qualification List -->
    <string-array name="doctor_qualification">
        MBBS – Bachelor of Medicine, Bachelor of Surgery,
        BDS – Bachelor of Dental Surgery,
        BAMS – Bachelor of Ayurvedic Medicine and Surgery,
        BUMS – Bachelor of Unani Medicine and Surgery,
        BHMS – Bachelor of Homeopathy Medicine and Surgery,
        Bachelor of Occupational Therapy,
        Bachelor of Science in Biotechnology,
        Bachelor of Technology in Biomedical Engineering,
        Bachelor of Science in Microbiology (Non-Clinical),
        MD Specialty - Anaesthesiology,
        MD Specialty - Biochemistry,
        MD Specialty - Dermatology,
        MD Specialty - Field Epidemiology,
        MD Specialty - Microbiology,
        MD Specialty - Paediatrics,
        MD Specialty - Pathology,
        MD Specialty - Pharmacology,
        MD Specialty - Physiology,
        MD Specialty - Microbiology,
        MD Specialty - Psychiatry,
        MD Specialty - Obstetric and Gynecology,
    </string-array>
</resources>
